Closed Bug 1746486 Opened 4 years ago Closed 4 years ago

Client shadows should be used in Cinnamon.

Categories

(Core :: Widget: Gtk, defect)

Firefox 95
Desktop
Linux
defect

Tracking

()

VERIFIED FIXED
97 Branch
Tracking Status
firefox96 --- verified
firefox97 --- verified

People

(Reporter: miketwebster, Assigned: miketwebster)

References

Details

Attachments

(2 files)

Attached image cinnamon-csd.png

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:94.0) Gecko/20100101 Firefox/94.0

Steps to reproduce:

  1. Launch firefox in Cinnamon, using Mint-Y gtk3 theme (or potentially some other with significantly rounded window header corners).
  2. Application menu-> More tools -> Customize toolbar, Uncheck "Title bar"

Actual results:

Observe sharp corner artifact in addition to rounded corners.

Expected results:

Rounded corners, matching other gtk client-decorated apps..

Cinnamon supports _GTK_FRAME_EXTENTS.

Assignee: nobody → miketwebster
Status: UNCONFIRMED → ASSIGNED
Component: Untriaged → Widget: Gtk
Ever confirmed: true
OS: Unspecified → Linux
Product: Firefox → Core
Hardware: Unspecified → Desktop

Can you test latest nighty?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems#Testing_Mozilla_binaries

It's supposed to work there, it's Bug 1509931.

Flags: needinfo?(miketwebster)

Same result - my issue looks slightly different than that (and I'm on x11, not wayland). I should have noted I had tested this on the bookmarks/beta branch (my user agent is from my system version).

I notice we still end up with a frame and content window here (using wininfo to check) - it could be causing confusion. I haven't had time to dig into the 'why' any further yet. We've probably had this issue for a while, but we just recently changed our theme to have rounded titlebar corners and finally noticed it.

I tested on gnome-shell/x11 3.36.9 using the same theme, and it doesn't seem affected, though there are significant differences in how decorations are handled between muffin and mutter). But for the purposes of emulating a 'real' client-decorated GtkWindow, we should have _GTK_FRAME_EXTENTS set.

Thanks

Flags: needinfo?(miketwebster)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/e4f54b8aab64 Cinnamon should use GTK_DECORATION_CLIENT r=stransky
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

Thanks a lot!

Is there any chance this can make it in 96 stable? If not I understand - I realize it's fairly late in the beta cycle - but this is a trivial change and it's a pretty visible issue for Cinnamon users.

Thanks again

Comment on attachment 9255784 [details]
Bug 1746486 - Cinnamon should use GTK_DECORATION_CLIENT r?stransky

Beta/Release Uplift Approval Request

  • User impact if declined: Cinnamon users will see wrong titlebar corners when system titlebar is disabled.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial switch of titlebar style, already testes on Wayland/KDE and other environments.
  • String changes made/needed:
Attachment #9255784 - Flags: approval-mozilla-beta?

Comment on attachment 9255784 [details]
Bug 1746486 - Cinnamon should use GTK_DECORATION_CLIENT r?stransky

Approved for 96.0b9

Attachment #9255784 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Hello,

Managed to reproduce this issue on 96.0b7(BuildID:20211219185855) with Linux Mint 20.2 Cinnamon.

Confirming this issue as verified fixed on 96.0b9(BuildID:20211223202418) and 97.0a1(BuildID:20211226213620) on Linux Mint 20.2 Cinnamon.

Status: RESOLVED → VERIFIED

Thanks for squeezing this in!

See Also: → 1843220
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: