Bug 1746486 - Cinnamon should use GTK_DECORATION_CLIENT r=stransky

Cinnamon supports _GTK_FRAME_EXTENTS.

Differential Revision: https://phabricator.services.mozilla.com/D134063